[gd_scene load_steps=8 format=3 uid="uid://bclvvd40stsfw"]

[ext_resource type="Script" uid="uid://bdaqhk22m46a1" path="res://scenes/mini_games/weight_lifting/weight_lifting.gd" id="1_up734"]
[ext_resource type="Texture2D" uid="uid://vbbd4tvh6y6v" path="res://assets/sprites/backgrounds/SPORT_BG.png" id="2_ag8qd"]
[ext_resource type="Texture2D" uid="uid://b3aa8vq01qm5t" path="res://assets/sprites/mini_games/weight_lifting/DumbBellHand.png" id="3_sc3fx"]
[ext_resource type="AudioStream" uid="uid://ixrtvtw24f8h" path="res://assets/sfx/mini_games/FX_GAME_Win_1.3.wav" id="3_tnmdq"]
[ext_resource type="Texture2D" uid="uid://2anae5v05lk" path="res://assets/sprites/mini_games/weight_lifting/ThumbUp.png" id="4_cyya0"]
[ext_resource type="Texture2D" uid="uid://rfadpghyphdd" path="res://assets/sprites/mini_games/hammer_time/SplashFail.png" id="4_t4sug"]
[ext_resource type="Script" uid="uid://qgeq2li0a5tv" path="res://scenes/components/rotation_component/rotation_component.gd" id="5_ladbj"]

[node name="WeightLifting" type="Node2D"]
script = ExtResource("1_up734")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_ag8qd")

[node name="Arm" type="Node2D" parent="."]
position = Vector2(0, 832)

[node name="Sprite2D" type="Sprite2D" parent="Arm"]
position = Vector2(0, 406)
texture = ExtResource("3_sc3fx")

[node name="StartMarker" type="Marker2D" parent="."]
position = Vector2(0, 256)

[node name="EndMarker" type="Marker2D" parent="."]
position = Vector2(0, -256)

[node name="Star" type="Sprite2D" parent="."]
position = Vector2(0, 44)
texture = ExtResource("4_t4sug")

[node name="RotationComponent" type="Node" parent="Star"]
script = ExtResource("5_ladbj")
amount = 30.0
mode = "Continuous"

[node name="MayorArm" type="Node2D" parent="."]
modulate = Color(0.747786, 0.747786, 0.747786, 1)

[node name="Sprite2D" type="Sprite2D" parent="MayorArm"]
position = Vector2(-464, 43)
texture = ExtResource("4_cyya0")

[node name="MayorStartMarker" type="Marker2D" parent="."]
position = Vector2(1507, 305)
rotation = -0.610865

[node name="MayorEndMarker" type="Marker2D" parent="."]
position = Vector2(1507, 305)
rotation = 0.261799

[node name="MayorWinMarker" type="Marker2D" parent="."]
position = Vector2(1100, 305)
rotation = 0.261799
scale = Vector2(1.35, 1.35)

[node name="WinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tnmdq")
bus = &"SFX"
